# coo

./: Cargo.toml  README.md
src/: libs.rs  main.rs
src/resources/: coo.css
src/views/: assorted_card.rs  files_and_file.rs  mod.rs
