[package]
name = "coo"
version = "0.1.0"
authors = ["Motoki Naruse <motoki@naru.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
gio = "0.9.1"
glib = "0.10.3"
log = "0.4.14"
shellexpand = "2.1.0"
toml = "0.5.8"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]
