[package]
name = "coo"
version = "0.1.0"
authors = ["Motoki Naruse <motoki@naru.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
chrono = { version = "0.4.15", features=["serde"] }
env_logger = "0.8.4"
gdk = "^0.13.2"
gio = "0.9.1"
glib = "0.10.3"
gtk = { version = "0.9.2", features = ["v3_16"] }
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
shellexpand = "2.1.0"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4"] }
