[package]
name = "coo"
version = "0.1.0"
authors = ["Motoki Naruse <motoki@naru.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9"
chrono = { version = "0.4", features=["serde"] }
env_logger = "0.8"
gdk = "0.14"
gio = "0.14"
glib = "0.14"
gtk = "^0.14"
log = "^0.4"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
